# GitLab-Wiki-AI

./: .editorconfig  .gitignore  AGENTS.md  CONTRIBUTING.md  README.es.md  README.md  SECURITY.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml  pytest.ini  requirements.txt
backend/app/: main.py
backend/app/api/: _cache.py  _chat.py  _deps.py  _groups.py  _repositories.py  routes.py
backend/app/core/: config.py  rate_limit.py
backend/app/db/: session.py
backend/app/models/: db_models.py  schemas.py
backend/app/services/: code_chunker.py  cross_repo_graph.py  cross_repo_search.py  dependency_graph.py  embedding_client.py  gitlab_client.py  group_indexer.py  indexer.py  lock_manager.py  page_regenerator.py  structure_analyzer.py  vector_store.py  wiki_exporter.py  wiki_generator.py  wiki_prompts.py
backend/tests/: mock_embedding_server.py  mock_gitlab_server.py  mock_llm_server.py  test_chat_sources_http.py  test_code_chunker.py  test_code_search_http.py  test_dependency_graph.py  test_embedding_client.py  test_full_pipeline.py  test_gitlab_integration.py  test_regressions.py  test_vector_store.py  test_wiki_exporter.py  test_wiki_generator_openai.py
frontend/: .dockerignore  .env.example  Dockerfile  MIGRATION_PLAN.md  angular.json  eslint.config.js  eslint.config.mjs  index.html  karma.conf.js  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  index.html  main.jsx  styles.css
frontend/src/__tests__/: ConnectForm.test.jsx  gitlab.test.js  language.test.js  offlineCache.test.js
frontend/src/api/: client.js
frontend/src/app/: app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/services/: api.service.ts  error-handler.service.ts  getting-started.service.spec.ts  getting-started.service.ts  group.service.ts  mermaid.service.ts  offline-cache.service.spec.ts  offline-cache.service.ts  repo.service.spec.ts  repo.service.ts  theme.service.ts  toast.service.ts
frontend/src/app/utils/: gitlab-url.spec.ts  gitlab-url.ts  language.spec.ts  language.ts
frontend/src/components/: AskPanel.jsx  CodeSearch.jsx  CommandPalette.jsx  ConnectForm.jsx  DependencyGraphView.jsx  GroupBrowser.jsx  GroupConnectForm.jsx  GroupIndexingProgress.jsx  GroupWikiView.jsx  GroupWikiView.styles.js  HighlightedCode.jsx  IndexingProgress.jsx  JobHistoryPanel.jsx  KeyboardShortcutsModal.jsx  MermaidDiagram.jsx  RepoSettingsPanel.jsx  RepositoryBrowser.jsx  RevisionPanel.jsx  WikiLayout.jsx  WikiPageContent.jsx  WikiSidebar.jsx  WikiSidebar.styles.js
frontend/src/hooks/: useFocusTrap.js  useJobPolling.js
frontend/src/utils/: gitlab.js  language.js  mermaid.js  offlineCache.js
(+73 files in other folders)
