[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite==0.20.0",
    "fastapi[standard]==0.115.6",
    "httpx==0.28.1",
    "llama-index>=0.12.38",
    "llama-index-core>=0.12.42",
    "llama-index-embeddings-huggingface>=0.5.5",
    "openai==1.59.7",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "python-multipart==0.0.20",
    "qdrant-client==1.12.2",
    "sqlalchemy==2.0.36",
    "tiktoken==0.8.0",
    "tree-sitter-language-pack>=1.10.9",
    "uvicorn[standard]==0.34.0",
]
