[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for generating searchable AI wikis from GitLab repositories"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite==0.20.0",
    "fastapi[standard]==0.115.6",
    "httpx==0.28.1",
    "llama-index-core>=0.12.42",
    "openai==1.59.7",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "python-multipart==0.0.20",
    "qdrant-client==1.12.2",
    "sqlalchemy==2.0.36",
    "tiktoken==0.8.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-language-pack>=1.10.9",
    "uvicorn[standard]==0.34.0",
    "slowapi>=0.1.10",
    "python-json-logger>=4.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
